maj affichage picture

--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th>Picture</th>
-                <td>{{ article.picture }}</td>
+                <td> <img src="{{ article.picture }}" alt="" height='200px'> </td>
             </tr>
             <tr>
                 <th>CreationDate</th>
